# langchain-langgraph-python

./: README.md  pyproject.toml
projects/: chat-with-structured-output-pydantic-parser.py  chat-with-tool-calling-simple.py  chat-with-tool-calling-web-search.py  chat-with-tool-calling.py  ollama-chat.py
projects/aws-bedrock/: chat-chain-prompt-n-str-parser.py  chat-with-pydantic-output-parser.py  simple-chat.py
projects/langchain/others/: chat-with-tool-calling-simple.py  deepseek-chat.py  ollama-chat.py  openai-chat.py
projects/langgraph/: langgraph.ipynb  simple-chat-with-llm.py  simple-workflow-with-condition.ipynb  simple-workflow-with-condition.py  simple-workflow.py  simple_workflow.ipynb
projects/langgraph/notebooks/: graph-with-human-in-the-loop.ipynb  re-act-agent-human-in-the-loop.ipynb  re-act-agent.ipynb  react-agent.ipynb  simple-workflow-with-condition.ipynb  simple_chat_with_llm.ipynb  simple_workflow.ipynb
projects/langgraph/scripts/: graph-with-human-in-the-loop.py  re-act-agent-with-human-in-the-loop.py  re-act-agent-with-memory.py  re-act-agent.py  react-agent-with-memory.py  react-agent.py  simple-chat-with-llm.py  simple-workflow.py
projects/langgraph/scripts/mcp/: mcp-client.py
