[project]
name = "langchain-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "devtools>=0.12.2",
    "langchain>=0.3.14",
    "langchain-aws>=0.2.10",
    "langchain-core>=0.3.29",
    "langchain-deepseek-official>=0.1.0",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.0",
    "ollama>=0.4.7",
    "python-dotenv>=1.0.1",
]
